# auto-fuzz-test

./: .gitignore  Cargo.toml  README.md
src/: crate_parse.rs  generate.rs  lib.rs  main.rs  (+1 more)
tests/testing-workspace/: Cargo.toml
tests/testing-workspace/fn-borrow/: Cargo.toml
tests/testing-workspace/fn-borrow-mut/: Cargo.toml
tests/testing-workspace/fn-borrow-mut/src/: lib.rs
tests/testing-workspace/fn-borrow/src/: lib.rs
tests/testing-workspace/fn-no-borrow/: Cargo.toml
tests/testing-workspace/fn-no-borrow/src/: lib.rs
tests/testing-workspace/implblock-borrow/: Cargo.toml
tests/testing-workspace/implblock-borrow-mut/: Cargo.toml
tests/testing-workspace/implblock-borrow-mut/src/: lib.rs
tests/testing-workspace/implblock-borrow/src/: lib.rs
tests/testing-workspace/implblock-generator/: Cargo.toml
tests/testing-workspace/implblock-generator/src/: lib.rs
tests/testing-workspace/module--fn-borrow/: Cargo.toml
tests/testing-workspace/module--fn-borrow-mut/: Cargo.toml
tests/testing-workspace/module--fn-borrow-mut/src/: module.rs
tests/testing-workspace/module--fn-borrow/src/: module.rs
tests/testing-workspace/module--fn-no-borrow/: Cargo.toml
tests/testing-workspace/module--fn-no-borrow/src/: module.rs
tests/testing-workspace/module--implblock-borrow/: Cargo.toml
tests/testing-workspace/module--implblock-borrow-mut/: Cargo.toml
tests/testing-workspace/module--implblock-borrow-mut/src/: lib.rs  module.rs
tests/testing-workspace/module--implblock-borrow/src/: module.rs
tests/testing-workspace/module--implblock-generator/: Cargo.toml
(+14 files in other folders)
