[package]
name = "auto-fuzz-test"
version = "0.2.4"
authors = ["Eh2406 <YeomanYaacov@gmail.com>", "Sergey \"Shnatsel\" Davidoff <shnatsel@gmail.com>","Eugene Lomov <eugene.v.lomov@gmail.com>"]
edition = "2018"

[dependencies]
cargo_toml = "0.8.1"
fs3 = "0.5.0"
proc-macro2 = "1.0.24"
quote = "1.0.8"
syn = {version="1.0.58", features = ["full", "visit", "parsing", "extra-traits"] }
toml = "0.5"

[dev-dependencies]
arbitrary = { version = "1", features = ["derive"]  }
assert_tokens_eq = "0.1.0"
pretty_assertions = "0.6.1"
tempfile = "3.2.0"
test-case = "1.1.0"

[lib]
proc-macro = true

